Fixed spacing issue on picture/show and about us.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -152,7 +152,7 @@ div.margin-top {
   background: rgba(0, 0, 0, 0.7);
   margin-right: 1vw;
   margin-left: 1vw;
-  margin-top: 4em;
+  // margin-top: 4em;
 }
 
 div.about-text{
@@ -171,10 +171,16 @@ a.icons-sm {
   position: center;
 }
 
+.about-us {
+  margin-top: 8vh;
+}
+
 /* About us */
 .row about-text {
   margin-top: 10em;
 }
+
+
 
 img#wyncode{
   padding-bottom: 3vh;
